# reportserver

./: Cargo.toml  runserver.cmd  runserver.sh  startMongo.sh  startMongoClient.cmd
db/: queries  set_up
report-app/: package-lock.json  package.json
report-app-react/: package-lock.json  package.json
report-app-react/src/: App.css  App.js  index.js
report-app-react2/: .gitignore  package-lock.json  package.json  webpack.config.js
report-app-react2/src/client/: index.html
report-app-react2/src/client/app/: AwesomeComponent.jsx  DataPerCustomer.js  GroupedBarChart.js  Plot.jsx  SearchDataComponent.js  Sidebar.css  Sidebar.jsx  index.jsx
report-app-react2/src/client/app/scss/: main.scss
report-app-react2/src/client/app/scss/layout/: _grid.scss  _sidebar.scss
report-app-react2/src/client/public/: index.html
report-app/aurelia_project/: aurelia.json
report-app/src/: app.html  app.js
report-app/src/resources/: index.js
report-app/src/resources/elements/: table-wrapper.html  table-wrapper.js
src/: console_middleware.rs  cors_middleware.rs  dbaccess.rs  importer.rs  lib.rs  main.rs  reportserver.rs  server.rs
