[package]
name = "reportserver"
version = "0.1.0"
authors = ["Cannero <serunmal@gmail.com>"]

[dependencies]
encoding = "0.2.33"
chrono = "0.3"
bson = "0.7.1"
mongodb = "0.2.9"
iron = "*"
router = "*"
time = "*"
staticfile = "*"
mount = "*"
url = "*"
serde_json = "*"

[lib]
name = "reportlib"
path = "src/lib.rs"

[[bin]]
name = "importer"
path = "src/importer.rs"

[[bin]]
name = "reportserver"
path = "src/server.rs"